--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": ".",
   "devDependencies": {
     "@linthtml/linthtml": "^0.8.2",
     "concurrently": "^6.4.0",
