--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "lint:css": "stylelint **/*.scss",
     "lint:js": "eslint ./src",
     "lint": "concurrently \"npm run lint:html\" \"npm run lint:css\" \"npm run lint:js\"",
-    "build": "rm -rf dist && parcel build ./src/index.html --public-url ./company_landing --no-content-hash",
+    "build": "rm -rf dist && parcel build ./src/index.html --public-url /company_landing --no-content-hash",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": ".",
   "devDependencies": {
     "@linthtml/linthtml": "^0.8.2",
     "concurrently": "^6.4.0",
